# bot-lib

./: .gitignore  DEV_README.md  README.md  pyproject.toml
.github/workflows/: main.yml
archive/: DEV_README.md
archive/bot_lib/: utils.py
archive/bot_lib/handlers/: error_handler.py  handler.py
archive/bot_lib/migration_bot_base/core/: __init__.py  telegram_bot.py
archive/bot_lib/migration_bot_base/data_model/: mongo_utils.py
archive/bot_lib/migration_bot_base/utils/: text_utils.py
archive/bot_lib/tools/: download_file_with_pyrogram.py
archive/examples/basic_features_examples/: app_example_bot.py  bot_config_example.py  example.env
archive/examples/basic_handler_example/: bot_1_clean.py  bot_3_aiogram.py
archive/examples/basic_plugin_example/: bot.py  example.env  gpt_fairytale_bot.py
bot_lib/: __init__.py  demo.py  utils.py
bot_lib/core/: __init__.py  app.py  bot_config.py  bot_manager.py  deps.py  handler_utils.py
bot_lib/handlers/: __init__.py  basic_handler.py  dev_handler.py  error_handler.py  handler.py  handlerbase.py
bot_lib/handlers/beta/: __init__.py  forwarder-bot_lib.py  generate-session-idea-dev_handler.py  request_data_from_user.py
bot_lib/handlers/projects/: __init__.py  abstract-tool-user_handler.py  fairytale-bot_lib.py  gpt_python_sandbox_lib.py  message-history-bot_lib.py  outstanding-items-bot_handler.py
bot_lib/migration_bot_base/core/: __init__.py  app.py  app_config.py  ping_replies.txt  telegram_bot.py
bot_lib/migration_bot_base/utils/: __init__.py  audio_utils.py  logging_utils.py
bot_lib/plugins/: __init__.py  gpt_plugin.py  langchain_plugin.py  plugin.py
dev/: DEV_README.md  dev_setup.md  refactoring_extract_utils.md  todo.md  workalong.md
dev/draft/easter_eggs/: main.py
dev/draft/easter_eggs/word_pair_generator/: todo.md
dev/draft/example/: bot.py
dev/draft/lib_files/: bot_manager.py  dependency_manager.py  nbl_settings.py  settings.py
dev/draft/lib_files/components/: ask_user_handler.py  bot_commands_menu.py  error_handler.py  print_bot_url.py
dev/draft/lib_files/utils/: common.py  send_safe.py
dev/draft/misc/: dev.ipynb  lib1.py  lib2.py  lib3.py
dev/examples/: readme.md  todo.md
dev/examples/features/file-text/: idea.md
dev/examples/projects/forwarder-bot/: idea.md
dev/examples/unsorted/basic_bot/: README.md  bot.py  sample.env
dev/examples/unsorted/database_mongodb/: bot.py  dp_mongo_comp.py  notes.md
dev/examples/unsorted/standalone_components/: bot.py  sample.env
examples/: README.md
examples/basic_features_examples/: app_example_bot.py  bot_config_example.py
examples/basic_handler_example/: bot_1_clean.py  bot_2_hybrid.py  bot_3_aiogram.py
examples/basic_plugin_example/: bot.py  gpt_fairytale_bot.py
examples/hello_world_bot/: bot.py  bot_1_clean.py  bot_2_hybrid.py  bot_3_aiogram.py
nbl/: __init__.py
tests/: test_dispatcher_setup.py  test_imports.py
