[tool.poetry]
name = "bot-lib"
version = "0.4.0" # extract app into separate package - calmapp
description = "Calmmage Telegram bot library for better aiogram deployment"
authors = ["Petr Lavrov <petrlavrov@calmmage.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# for stability, use frozen-app-name branch
calmlib = { git = "https://github.com/calmmage/calmlib.git", branch = "main" }
calmapp = { git = "https://github.com/calmmage/calmapp.git", branch = "main" }
#calmmage = { git = "https://github.com/calmmage/calmmage.git", branch = "main" }
pytest = ">=8.0.0"
pytest-mongodb = ">=2.4.0"
# logging
loguru = ">=0.7.2"
toml = "*"
openai = ">=1.0.0"

aiogram = ">=3.4"

pydantic = ">=2.5.0"
pydantic-settings = ">=2.0.0"
mongoengine = ">=0.28.0"
pydub = ">=0.25.1"
tiktoken = "*"
pyrogram = ">=2.0.106"
# tgcrypto = ">=1.2.5"
aiolimiter = ">=1.1.0"
gpt-kit = { git = "https://github.com/calmmage/gpt-kit.git", branch = "gpt-engine" }
apscheduler = "*"

[tool.poetry.group.dev.dependencies]

aiogram-tests = ">=1.0.3"
easydict = ">=1.10"

jupyter = ">=1.0.0"
tqdm = "*"
# pandas = ">=2.1.0"
black = "*"
pre-commit = "*"

openai = ">=1.0.0"
langchain = "*"
langchain-anthropic = "*"
langchain-openai = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
