[tool.poetry]
name = "bot-lib"
version = "0.6.11" # update pyproject.toml and tests
description = "Calmmage Telegram bot library for better aiogram deployment"
authors = ["Petr Lavrov <petrlavrov@calmmage.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

# main dependencies
aiogram = ">=3.4"
pydantic = ">=2"
pydantic-settings = ">=2"

# personal libraries
calmlib = { git = "https://github.com/calmmage/calmlib.git", branch = "main" }
calmapp = { git = "https://github.com/calmmage/calmapp.git", branch = "main" }

# logging
loguru = ">=0.7"
# for parsing version
toml = ">=0.10"

[tool.poetry.group.extras.dependencies]
# dependencies for extra features
pydub = ">=0.25"
#pyrogram = ">=2.0.106"  # todo migrate to another lib
# for now - use this fork. Todo: troubleshoot (doesn't seem to be working)
pyrogram = { git = "https://github.com/KurimuzonAkuma/pyrogram.git", branch = "dev" }
tgcrypto = ">=1.2.5"  # necessary for pyrogram but breaks dependencies
# mtprotocrypt = "1.2.6.5b0"  # supposed tgcrypto replacement - not fixes pyrogram
#easydict = ">=1.10"

# legacy
gpt-kit = { git = "https://github.com/calmmage/gpt-kit.git", branch = "gpt-engine" }
mongoengine = ">=0.28.0"

[tool.poetry.group.test.dependencies]
pytest = ">=6"
# aiogram-tests = ">=1.0.3"
# pytest-mongodb = ">=2.4.0"

[tool.poetry.group.docs.dependencies]
#mkdocs = ">=1.6"

[tool.poetry.group.dev.dependencies]
# dev / research utils
jupyter = ">=1.0.0"
tqdm = ">=4"
# pandas = "2.1.0"
black = ">=24"
pre-commit = ">=3.8"

# AI from parent libs, if necessary
#langchain-anthropic = ">=0.2"
#langchain-openai = ">=0.2"
#langchain = ">=0.3"
#openai = ">=1.45"
#tiktoken = ">=0.7"
#aiolimiter = ">=1.1"
#apscheduler = ">=4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
