[tool.poetry]
name = "nbl"
version = "0.0.5" # add bot commands menu
description = "Calmmage Telegram bot library for better aiogram deployment"
authors = ["Petr Lavrov <petrlavrov@calmmage.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# main dependencies
aiogram = ">=3.4"
pydantic = ">=2"
pydantic-settings = ">=2"

# personal libraries
calmlib = { git = "https://github.com/calmmage/calmlib.git", branch = "main" }
calmapp = { git = "https://github.com/calmmage/calmapp.git", branch = "main" }

# logging
loguru = ">=0.7"
# for parsing version
toml = ">=0.10"

[tool.poetry.group.extras.dependencies]
# dependencies for extra features
pydub = ">=0.25"
openai = ">=1.45"
pyrogram = { git = "https://github.com/KurimuzonAkuma/pyrogram.git", branch = "dev" }
telethon = "*"
tgcrypto = ">=1.2.5"  # necessary for pyrogram but breaks dependencies


[tool.poetry.group.test.dependencies]
pytest = ">=6"
# aiogram-tests = ">=1.0.3"
# pytest-mongodb = ">=2.4.0"

[tool.poetry.group.docs.dependencies]
#mkdocs = ">=1.6"

[tool.poetry.group.dev.dependencies]
# dev / research utils
jupyter = ">=1.0.0"
tqdm = ">=4"
# pandas = "2.1.0"
black = ">=24"
pre-commit = ">=3.8"

# AI from parent libs, if necessary
#langchain-anthropic = ">=0.2"
#langchain-openai = ">=0.2"
#langchain = ">=0.3"
#tiktoken = ">=0.7"
#aiolimiter = ">=1.1"
#apscheduler = ">=4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
